feat: add product link in the menu

--- a/store/blocks/global/components/menu/category/menu-category-appletv.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-appletv.jsonc
@@ -35,7 +35,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.appletvonline.com/t/appletv",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "appletv tv 4k",
                 "text": "appletv tv 4k"
@@ -49,7 +49,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.appletvonline.com/t/appletv",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "appletv tv hd",
                 "text": "appletv tv hd"
@@ -63,7 +63,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.appletvonline.com/t/appletv",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
@@ -86,7 +86,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.appletvonline.com/t/appletv",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "Accesorios",
                 "text": "Accesorios"
@@ -101,7 +101,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.appletvonline.com/t/appletv",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
