--- a/store/blocks/global/components/menu/category/menu-category-giftcard.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-giftcard.jsonc
@@ -35,7 +35,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.gifcardonline.com/t/gifcard",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "gif card white",
                 "text": "gif card white"
@@ -49,7 +49,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.gifcardonline.com/t/gifcard",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "gif card blue",
                 "text": "gif card blue"
@@ -63,7 +63,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.gifcardonline.com/t/gifcard",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "gif card black",
                 "text": "gif card black"
@@ -77,7 +77,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.gifcardonline.com/t/gifcard",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
