--- a/store/blocks/global/components/menu/category/menu-category-ipad.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-ipad.jsonc
@@ -39,7 +39,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "ipad pro 12,9 (mi)",
                 "text": "ipad pro 12,9 (mi)"
@@ -53,7 +53,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "ipad pro 11 (mi)",
                 "text": "ipad pro 11 (mi)"
@@ -67,7 +67,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "ipad Air 10,9 (mi)",
                 "text": "ipad Air 10,9 (mi)"
@@ -81,7 +81,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "ipad 10,2 (mi)",
                 "text": "ipad 10,2 (mi)"
@@ -95,7 +95,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "ipad mini 8.3",
                 "text": "ipad mini 8.3"
@@ -109,7 +109,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
@@ -133,7 +133,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "Accesorios",
                 "text": "Accesorios"
@@ -148,7 +148,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
@@ -162,7 +162,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "Comprador ipad",
                 "text": "Comprador ipad"
@@ -185,7 +185,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "Ofertas",
                 "text": "Ofertas"
@@ -200,7 +200,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.ipadonline.com/t/ipad",
+                "href": "/cemento-argos-gris-50kg/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
