--- a/store/blocks/global/components/menu/category/menu-category-iphone.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-iphone.jsonc
@@ -44,7 +44,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 14 pro max",
                 "text": "iphone 14 pro max"
@@ -58,7 +58,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 14 pro",
                 "text": "iphone 14 pro"
@@ -72,7 +72,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 14 plus",
                 "text": "iphone 14 plus"
@@ -86,7 +86,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 14",
                 "text": "iphone 14"
@@ -100,7 +100,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 13 pro max",
                 "text": "iphone 13 pro max"
@@ -114,7 +114,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 13 pro",
                 "text": "iphone 13 pro"
@@ -128,7 +128,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 13",
                 "text": "iphone 13"
@@ -142,7 +142,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 13 mini",
                 "text": "iphone 13 mini"
@@ -156,7 +156,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 12",
                 "text": "iphone 12"
@@ -170,7 +170,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone 11",
                 "text": "iphone 11"
@@ -184,7 +184,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "iphone se (2022)",
                 "text": "iphone se (2022)"
@@ -198,7 +198,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
@@ -222,7 +222,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "",
                 "noFollow": false,
                 "tagTitle": "Accesorios",
                 "text": "Accesorios"
@@ -237,7 +237,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
@@ -251,7 +251,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.iphoneonline.com/t/iphone",
+                "href": "/zapatos?_q=zapatos&map=ft",
                 "noFollow": false,
                 "tagTitle": "Comprador iPhone",
                 "text": "Comprador iPhone"
