--- a/store/blocks/global/components/menu/category/menu-category-mac.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-mac.jsonc
@@ -41,7 +41,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Portatil",
                 "text": "Portatil"
@@ -56,7 +56,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "MacBook Pro 16 (M1 Pro)",
                 "text": "MacBook Pro 16 (M1 Pro)"
@@ -70,7 +70,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "MacBook Pro 14 (M1 Pro)",
                 "text": "MacBook Pro 14 (M1 Pro)"
@@ -84,7 +84,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "MacBook Pro 13 M2",
                 "text": "MacBook Pro 13 M2"
@@ -98,7 +98,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "MacBook Pro 13 M1",
                 "text": "MacBook Pro 13 M1"
@@ -112,7 +112,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "MacBook Pro 16 M1 (Intel)",
                 "text": "MacBook Pro 16 M1 (Intel)"
@@ -126,7 +126,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Ver Todo",
                 "text": "Ver Todo"
@@ -154,7 +154,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Escriorio",
                 "text": "Escriorio"
@@ -169,7 +169,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "iMac(M1)",
                 "text": "iMac(M1)"
@@ -183,7 +183,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "iMac(intel)",
                 "text": "iMac(intel)"
@@ -197,7 +197,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Mac mini (M1)",
                 "text": "Mac mini (M1)"
@@ -211,7 +211,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Mac studio",
                 "text": "Mac studio"
@@ -225,7 +225,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "studio display",
                 "text": "studio display"
@@ -239,7 +239,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Ver todo",
                 "text": "Ver todo"
@@ -263,7 +263,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Accesorios",
                 "text": "Accesorios"
@@ -278,7 +278,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Comparador Mac",
                 "text": "Comparador Mac"
@@ -292,7 +292,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Ver todo",
                 "text": "Ver todo"
@@ -315,7 +315,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Ofertas",
                 "text": "Ofertas"
@@ -330,7 +330,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.maconline.com/t/mac",
+                "href": "/varilla-corrugada-g60-w-4-1-2-pulg-x-6m/p",
                 "noFollow": false,
                 "tagTitle": "Ver todo",
                 "text": "Ver todo"
