--- a/store/blocks/global/components/menu/category/menu-category-musica.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-musica.jsonc
@@ -34,7 +34,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.musicaonline.com/t/musica",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "Airpods",
                 "text": "Airpods"
@@ -48,7 +48,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.musicaonline.com/t/musica",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "audifonos",
                 "text": "audifonos"
@@ -72,7 +72,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.musicaonline.com/t/musica",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "parlantes",
                 "text": "parlantes"
@@ -86,7 +86,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.musicaonline.com/t/musica",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
