--- a/store/blocks/global/components/menu/category/menu-category-outlet.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-outlet.jsonc
@@ -34,7 +34,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.outletonline.com/t/outlet",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "ahora o nunca",
                 "text": "ahora o nunca"
@@ -48,7 +48,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.outletonline.com/t/outlet",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "usados garantizados",
                 "text": "usados garantizados"
@@ -71,7 +71,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.outletonline.com/t/outlet",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "reacondicionados",
                 "text": "reacondicionados"
@@ -85,7 +85,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.outletonline.com/t/outlet",
+                "href": "/sol/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
