--- a/store/blocks/global/components/menu/category/menu-category-watch.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-watch.jsonc
@@ -41,7 +41,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch ultra",
                 "text": "Apple watch ultra"
@@ -55,7 +55,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch series 8",
                 "text": "Apple watch series 8"
@@ -69,7 +69,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch se (2 gen)",
                 "text": "Apple watch se (2 gen)"
@@ -83,7 +83,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch series 7",
                 "text": "Apple watch series 7"
@@ -97,7 +97,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch nike series 7",
                 "text": "Apple watch nike series 7"
@@ -111,7 +111,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch se",
                 "text": "Apple watch se"
@@ -125,7 +125,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch nike se",
                 "text": "Apple watch nike se"
@@ -139,7 +139,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Apple watch series 3",
                 "text": "Apple watch series 3"
@@ -153,7 +153,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
@@ -175,7 +175,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "Accesorios",
                 "text": "Accesorios"
@@ -190,7 +190,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "ver todo",
                 "text": "ver todo"
@@ -204,7 +204,7 @@
             "highlight": false,
             "itemProps": {
                 "type": "internal",
-                "href": "https://www.watchonline.com/t/watch",
+                "href": "/puerta-triplex-okume/p",
                 "noFollow": false,
                 "tagTitle": "comparador Watch",
                 "text": "comparador Watch"
